Implement --install & --reset flows for unmanaged OS
