# elemental-openapi.yaml
@@ -183,17 +183,6 @@ paths:
       summary: Get ElementalHost bootstrap
 components:
   schemas:
-    ApiBootstrapFile:
-      properties:
-        content:
-          type: string
-        owner:
-          type: string
-        path:
-          type: string
-        permissions:
-          type: string
-      type: object
     ApiBootstrapResponse:
       properties:
         runcmd:
@@ -203,7 +192,7 @@ components:
           type: array
         write_files:
           items:
-            $ref: '#/components/schemas/ApiBootstrapFile'
+            $ref: '#/components/schemas/ApiWriteFile'
           nullable: true
           type: array
       type: object
@@ -236,6 +225,9 @@ components:
           additionalProperties:
             type: string
           type: object
+        reset:
+          nullable: true
+          type: boolean
       type: object
     ApiHostResponse:
       properties:
@@ -260,16 +252,48 @@ components:
       properties:
         config:
           $ref: '#/components/schemas/V1Beta1Config'
-        machineAnnotations:
+        hostAnnotations:
           additionalProperties:
             type: string
           type: object
-        machineLabels:
+        hostLabels:
           additionalProperties:
             type: string
           type: object
       type: object
+    ApiWriteFile:
+      properties:
+        content:
+          type: string
+        owner:
+          type: string
+        path:
+          type: string
+        permissions:
+          type: string
+      type: object
     RuntimeRawExtension:
+      type: object
+    V1Beta1Agent:
+      properties:
+        debug:
+          type: boolean
+        hostname:
+          $ref: '#/components/schemas/V1Beta1Hostname'
+        insecureAllowHttp:
+          type: boolean
+        insecureSkipTlsVerify:
+          type: boolean
+        noSmbios:
+          type: boolean
+        osNotManaged:
+          type: boolean
+        reconciliation:
+          type: integer
+        useSystemCertPool:
+          type: boolean
+        workDir:
+          type: string
       type: object
     V1Beta1Config:
       properties:
@@ -282,6 +306,8 @@ components:
       type: object
     V1Beta1Elemental:
       properties:
+        agent:
+          $ref: '#/components/schemas/V1Beta1Agent'
         install:
           $ref: '#/components/schemas/V1Beta1Install'
         registration:
@@ -329,13 +355,11 @@ components:
       type: object
     V1Beta1Registration:
       properties:
+        apiEndpoint:
+          type: string
         caCert:
           type: string
-        hostname:
-          $ref: '#/components/schemas/V1Beta1Hostname'
-        noSmbios:
-          type: boolean
-        url:
+        uri:
           type: string
       type: object
     V1Beta1Reset:
